--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,4 +6,4 @@ include:
 variables:
   DEV_BASE_DOMAIN: multiplatform-project.ktsdev.ru
   PROD_DOMAIN: multiplatform-project.ru-prod2.kts.studio
-  USE_DEFAULT_NPMRC: '0'
+  USE_DEFAULT_NPMRC: "0"
