feat: readme, beautified app

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,7 @@ server {
     root /usr/share/nginx/html;
 
     location / {
-        rewrite ^ /entries/iframe/index.html break;
+        rewrite ^ /entries/web/index.html break;
         expires -1;
         etag off;
         if_modified_since off;
